<resources>
    <string name="app_name">Chats-Kotlin</string>

    <string name="default_web_client_id">AIzaSyBadIhhBNopOC5qdKs4L6C95c4zgxaJLMQ</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chats">Chats</string>
    <string name="tv_Titulos">Titulos</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="txt_login">Login</string>
    <string name="et_email">Correo electronico</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>

    <string name="txt_registro">Registro</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_R_Password">Repita la contraseña</string>
    <string name="btn_Registrar">Registrar</string>

    <string name="btn_CerrarSesion">Cerrar sesión</string>

    <string name="txt_nombre">Nombres: </string>
    <string name="tv_nombre"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>