<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegistroEmailActivity">

   <TextView
       android:text="@string/txt_registro"
       android:textAllCaps="true"
       android:textSize="20sp"
       android:textStyle="bold"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/registro_usuario"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <!--NOMBRES-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Nombres"
            android:inputType="textPersonName"
            android:hint="@string/et_Nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--CORREO-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/et_email"
            android:hint="@string/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_password"
            android:hint="@string/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--R PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_R_password"
            android:hint="@string/et_R_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registrar"
        android:text="@string/btn_Registrar"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:cornerRadius="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>